--- a/alta.html
+++ b/alta.html
@@ -6,20 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GYM FIT - Registro</title>
     <link rel="stylesheet" href="css/estilo.css">
-    <style>
-        /* CSS interno para esta página específica - visto página 3 */
-        .pagina-alta .contenido-central {
-            margin-left: auto;
-            margin-right: auto;
-            width: 800px;
-        }
-    </style>
+ 
 </head>
 
 <body class="pagina-alta">
 
     <header>
-        <h1>🏋️ GYM FIT CENTER</h1>
+        <h1>GYM FIT CENTER</h1>
         <p>Tu lugar para ponerte en forma</p>
     </header>
 
