--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                 </table>
 
                 <!-- Elemento con transición básica -->
-                <div class="anuncio transicion" style="width: 200px; margin: 20px auto">
-                    <p class="texto-destacado">¡OFERTA ESPECIAL!</p>
+                <div class="oferta" >
+                    <p >¡OFERTA ESPECIAL!</p>
                     <p>3 meses por el precio de 2</p>
                 </div>
             </section>
