--- a/noticias.html
+++ b/noticias.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>🏋️ GYM FIT CENTER</h1>
+        <h1>GYM FIT CENTER</h1>
         <p>Tu lugar para ponerte en forma</p>
     </header>
 
