hago todos los cambios de css, y creo una pagina de css general, y otras 3 para cada pagina

--- a/alta.html
+++ b/alta.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GYM FIT - Registro</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/estilos-alta.css">
+    <link rel="stylesheet" href="css/estilos-comun.css">
  
 </head>
 
