--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p class="texto-italic">Oferta limitada</p>
             </div>
             <div class="anuncio">
-                <h3>🥤 Bebidas Energéticas</h3>
+                <h3>Bebidas Energéticas</h3>
                 <p>2x1 en todas</p>
                 <p class="texto-destacado">¡NUEVO!</p>
             </div>
