--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 
 <head>
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GYM FIT - Inicio</title>
     <link rel="stylesheet" href="css/estilos-index.css" />
-    <link rel="stylesheet" href="css/estilos-comun.css">
+    <link rel="stylesheet" href="css/estilos-comun.css" />
 </head>
 
 <body>
-
     <header>
         <h1>GYM FIT CENTER</h1>
         <p>Tu lugar para ponerte en forma</p>
@@ -53,7 +52,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="alta.html">Alta (Registro)</a></li>
                     <li>
-                        <a href="https://www.fitness.com/" target="_blank">Revista Fitness</a>
+                        <a href="https://www.sportlife.es/" target="_blank">Revista Fitness</a>
                     </li>
                     <li>
                         <a href="https://www.menshealth.com/es/" target="_blank">Men's Health</a>
@@ -73,15 +72,12 @@
                 </p>
 
                 <h3>Nuestras Instalaciones</h3>
-                <img src="recursos/pesas.jpg" alt="Zona de pesas" width="300"
-                    style="margin: 10px; border: 2px solid #663399" />
-                <img src="recursos/cardio.jpg" alt="Zona de cardio" width="300"
-                    style="margin: 10px; border: 2px solid #663399" />
+                <img src="recursos/pesas.jpg" alt="Zona de pesas" width="300" />
+                <img src="recursos/cardio.jpg" alt="Zona de cardio" width="300" />
 
                 <h3>Rutina de ejemplo</h3>
-                <!-- video -->
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=h_boJqs72mg"
-                    title="Rutina de gym"></iframe>
+
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/dmX0l1TprQg?si=Xxtfgm_n9d6Bllor" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                 <!-- TABLA DE HORARIOS -->
                 <h3>Horarios de Clases</h3>
@@ -117,8 +113,8 @@
                 </table>
 
                 <!-- Elemento con transición básica -->
-                <div class="oferta" >
-                    <p >¡OFERTA ESPECIAL!</p>
+                <div class="oferta">
+                    <p>¡OFERTA ESPECIAL!</p>
                     <p>3 meses por el precio de 2</p>
                 </div>
             </section>
