--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>GYM FIT - Inicio</title>
     <link rel="stylesheet" href="css/estilos-index.css" />
     <link rel="stylesheet" href="css/estilos-comun.css" />
+      <link rel="icon" type="image/x-icon" href="recursos/favicon.png">
 </head>
 
 <body>
